Fix bugs about mousemove handlers.

--- a/OOP.Samples.JavaScript/BlockBreaker.OOP.1.html
+++ b/OOP.Samples.JavaScript/BlockBreaker.OOP.1.html
@@ -24,6 +24,10 @@
             return this.canvasElement.height;
         }
 
+        get offsetLeft() {
+            return this.canvasElement.offsetLeft;
+        }
+
         clear() {
             this.context.clearRect(0, 0, this.width, this.height);
         }
@@ -190,10 +194,9 @@
             }
         }
 
-        if(rightPressed && paddleX < canvas.width-paddleWidth) {
+        if (rightPressed && paddleX < canvas.width - paddleWidth) {
             paddleX += 7;
-        }
-        else if(leftPressed && paddleX > 0) {
+        } else if(leftPressed && paddleX > 0) {
             paddleX -= 7;
         }
 
