--- a/OOP.Samples.JavaScript/BlockBreaker.OOP.4.html
+++ b/OOP.Samples.JavaScript/BlockBreaker.OOP.4.html
@@ -107,10 +107,10 @@
     class Paddle {
         static height = 10;
         static width = 75;
+        static moveSize = 7;
 
         constructor(maxWidth) {
-            // this.height = 10;
-            // this.width = 75;
+            this.maxWidth = maxWidth;
             this.x0 = this.x = (maxWidth - Paddle.width) / 2;
         }
 
@@ -119,19 +119,29 @@
         }
 
         moveRight() {
-            this.x += 7;
+            this.x += Paddle.moveSize;
+            this.adjust();
         }
         
         moveLeft() {
-            this.x -= 7;
+            this.x -= Paddle.moveSize;
+            this.adjust();
         }
 
         moveTo(x) {
             this.x = x;
+            this.adjust();
         }
 
         reset() {
             this.x = this.x0;
+        }
+
+        adjust() {
+            if (this.x < 0)
+                this.x = 0;
+            else if (this.x + Paddle.width > this.maxWidth)
+                this.x = this.maxWidth - Paddle.width;
         }
     }
 
@@ -166,19 +176,19 @@
         constructor() {
             this.bricks = [];
 
-            for (var column = 0; column < Bricks.columnCount; column++) {
+            for (let column = 0; column < Bricks.columnCount; column++) {
                 this.bricks[column] = [];
-                for (var row = 0; row < Bricks.rowCount; row++)
+                for (let row = 0; row < Bricks.rowCount; row++)
                     this.bricks[column][row] = new Brick();
             }
         }
 
         draw(canvas) {
-            for (var column = 0; column < Bricks.columnCount; column++) {
-                for (var row = 0; row < Bricks.rowCount; row++) {
+            for (let column = 0; column < Bricks.columnCount; column++) {
+                for (let row = 0; row < Bricks.rowCount; row++) {
                     if (this.bricks[column][row].status == 1) {
-                        var brickX = (row * (Brick.width + Bricks.padding)) + Bricks.offsetLeft;
-                        var brickY = (column * (Brick.height + Bricks.padding)) + Bricks.offsetLeft;
+                        const brickX = (row * (Brick.width + Bricks.padding)) + Bricks.offsetLeft;
+                        const brickY = (column * (Brick.height + Bricks.padding)) + Bricks.offsetLeft;
                         this.bricks[column][row].moveTo(brickX, brickY);
                         this.bricks[column][row].draw(canvas);
                     }
@@ -187,9 +197,9 @@
         }
 
         collisionDetection(ball) {
-            for (var column = 0; column < Bricks.columnCount; column++) {
-                for (var row = 0; row < Bricks.rowCount; row++) {
-                    var brick = this.bricks[column][row];
+            for (let column = 0; column < Bricks.columnCount; column++) {
+                for (let row = 0; row < Bricks.rowCount; row++) {
+                    const brick = this.bricks[column][row];
                     if (brick.status == 1) {
                         if (ball.x > brick.x && ball.x < brick.x + Brick.width && ball.y > brick.y && ball.y < brick.y + Brick.height) {
                             ball.yTurn();
@@ -206,41 +216,38 @@
         }
     }
 
-    let canvas = new Canvas("myCanvas");
-    let ball   = new Ball(canvas.width / 2, canvas.height - 30, 2, -2);
-    let paddle = new Paddle(canvas.width);
-    let bricks = new Bricks();
+    const canvas = new Canvas("myCanvas");
+    const ball   = new Ball(canvas.width / 2, canvas.height - 30, 2, -2);
+    const paddle = new Paddle(canvas.width);
+    const bricks = new Bricks();
 
-    var rightPressed = false;
-    var leftPressed = false;
-    var score = 0;
-    var lives = 3;
+    let rightPressed = false;
+    let leftPressed = false;
+    let score = 0;
+    let lives = 3;
 
     document.addEventListener("keydown", keyDownHandler, false);
     document.addEventListener("keyup", keyUpHandler, false);
     document.addEventListener("mousemove", mouseMoveHandler, false);
 
     function keyDownHandler(e) {
-        if(e.code  == "ArrowRight") {
+        if (e.code  == "ArrowRight")
             rightPressed = true;
-        }
-        else if(e.code == 'ArrowLeft') {
+        else if (e.code == 'ArrowLeft')
             leftPressed = true;
-        }
     }
+
     function keyUpHandler(e) {
-        if(e.code == 'ArrowRight') {
+        if (e.code == 'ArrowRight')
             rightPressed = false;
-        }
-        else if(e.code == 'ArrowLeft') {
+        else if (e.code == 'ArrowLeft')
             leftPressed = false;
-        }
     }
+
     function mouseMoveHandler(e) {
-        var relativeX = e.clientX - canvas.offsetLeft;
-        if (relativeX > 0 && relativeX < canvas.width) {
+        const relativeX = e.clientX - canvas.offsetLeft;
+        if (relativeX > 0 && relativeX < canvas.width)
             paddle.moveTo(relativeX - Paddle.width / 2);
-        }
     }
 
     function draw(canvas) {
@@ -254,12 +261,10 @@
         canvas.drawLives(lives);
         bricks.collisionDetection(ball);
 
-        if (ball.x + ball.dx > canvas.width - Ball.radius || ball.x + ball.dx < Ball.radius) {
+        if (ball.x + ball.dx > canvas.width - Ball.radius || ball.x + ball.dx < Ball.radius)
             ball.xTurn();
-            // dx = -dx;
-        } if (ball.y + ball.dy < Ball.radius) {
+        if (ball.y + ball.dy < Ball.radius) {
             ball.yTurn();
-            //dy = -dy;
         } else if (ball.y + ball.dy > canvas.height - Ball.radius) {
             if (ball.x > paddle.x && ball.x < paddle.x + Paddle.width) {
                 ball.yTurn();
