--- a/OOP.Samples.JavaScript/BlockBreaker.OOP.3.html
+++ b/OOP.Samples.JavaScript/BlockBreaker.OOP.3.html
@@ -49,11 +49,11 @@
         }
 
         drawBricks(bricks, brickColumnCount, brickRowCount, brickPadding, brickOffsetTop, brickOffsetLeft, brickWidth, brickHeight) {
-            for (var c = 0; c < brickColumnCount; c++) {
-                for (var r = 0; r < brickRowCount; r++) {
+            for (let c = 0; c < brickColumnCount; c++) {
+                for (let r = 0; r < brickRowCount; r++) {
                     if (bricks[c][r].status == 1) {
-                        var brickX = (r * (brickWidth + brickPadding)) + brickOffsetLeft;
-                        var brickY = (c * (brickHeight + brickPadding)) + brickOffsetTop;
+                        const brickX = (r * (brickWidth + brickPadding)) + brickOffsetLeft;
+                        const brickY = (c * (brickHeight + brickPadding)) + brickOffsetTop;
                         bricks[c][r].x = brickX;
                         bricks[c][r].y = brickY;
                         this.context.beginPath();
@@ -140,27 +140,27 @@
     let canvas = new Canvas("myCanvas");
     let ball = new Ball(canvas.width / 2, canvas.height - 30, 2, -2);
 
-    var paddleHeight = 10;
-    var paddleWidth = 75;
-    var paddleX = (canvas.width-paddleWidth)/2;
-    var rightPressed = false;
-    var leftPressed = false;
-    var brickRowCount = 5;
-    var brickColumnCount = 3;
-    var brickWidth = 75;
-    var brickHeight = 20;
-    var brickPadding = 10;
-    var brickOffsetTop = 30;
-    var brickOffsetLeft = 30;
-    var score = 0;
-    var lives = 3;
+    const paddleHeight = 10;
+    const paddleWidth = 75;
+    let paddleX = (canvas.width-paddleWidth)/2;
+    const paddleMoveSize = 7;
+    let rightPressed = false;
+    let leftPressed = false;
+    const brickRowCount = 5;
+    const brickColumnCount = 3;
+    const brickWidth = 75;
+    const brickHeight = 20;
+    const brickPadding = 10;
+    const brickOffsetTop = 30;
+    const brickOffsetLeft = 30;
+    let score = 0;
+    let lives = 3;
 
-    var bricks = [];
-    for(var c=0; c<brickColumnCount; c++) {
+    let bricks = [];
+    for (let c = 0; c < brickColumnCount; c++) {
         bricks[c] = [];
-        for(var r=0; r<brickRowCount; r++) {
+        for (let r = 0; r<brickRowCount; r++)
             bricks[c][r] = { x: 0, y: 0, status: 1 };
-        }
     }
 
     document.addEventListener("keydown", keyDownHandler, false);
@@ -168,33 +168,31 @@
     document.addEventListener("mousemove", mouseMoveHandler, false);
 
     function keyDownHandler(e) {
-        if(e.code  == "ArrowRight") {
+        if (e.code  == "ArrowRight")
             rightPressed = true;
-        }
-        else if(e.code == 'ArrowLeft') {
+        else if (e.code == 'ArrowLeft')
             leftPressed = true;
-        }
     }
+
     function keyUpHandler(e) {
-        if(e.code == 'ArrowRight') {
+        if(e.code == 'ArrowRight')
             rightPressed = false;
-        }
-        else if(e.code == 'ArrowLeft') {
+        else if(e.code == 'ArrowLeft')
             leftPressed = false;
-        }
     }
 
     function mouseMoveHandler(e) {
-        var relativeX = e.clientX - canvas.offsetLeft;
+        const relativeX = e.clientX - canvas.offsetLeft;
         if (relativeX > 0 && relativeX < canvas.width) {
             paddleX = relativeX - paddleWidth / 2;
+            adjustPaddle();
         }
     }
 
     function collisionDetection() {
-        for (var c = 0; c < brickColumnCount; c++) {
-            for (var r = 0; r < brickRowCount; r++) {
-                var b = bricks[c][r];
+        for (let c = 0; c < brickColumnCount; c++) {
+            for (let r = 0; r < brickRowCount; r++) {
+                let b = bricks[c][r];
                 if (b.status == 1) {
                     if (ball.x > b.x && ball.x < b.x + brickWidth && ball.y > b.y && ball.y < b.y + brickHeight) {
                         ball.yTurn();
@@ -223,10 +221,8 @@
 
         if (ball.x + ball.dx > canvas.width - ball.radius || ball.x + ball.dx < ball.radius) {
             ball.xTurn();
-            // dx = -dx;
         } if (ball.y + ball.dy < ball.radius) {
             ball.yTurn();
-            //dy = -dy;
         } else if (ball.y + ball.dy > canvas.height - ball.radius) {
             if (ball.x > paddleX && ball.x < paddleX + paddleWidth) {
                 ball.yTurn();
@@ -243,13 +239,22 @@
         }
 
         if (rightPressed && paddleX < canvas.width - paddleWidth) {
-            paddleX += 7;
+            paddleX += paddleMoveSize;
+            adjustPaddle();
         } else if(leftPressed && paddleX > 0) {
-            paddleX -= 7;
+            paddleX -= paddleMoveSize;
+            adjustPaddle();
         }
 
         ball.move();
         requestAnimationFrame(() => draw(canvas));
+    }
+    
+    function adjustPaddle() {
+        if (paddleX < 0)
+            paddleX = 0;
+        else if (paddleX + paddleWidth > canvas.width)
+            paddleX = canvas.width - paddleWidth;
     }
 
     draw(canvas);
